--- a/gym.html
+++ b/gym.html
@@ -89,7 +89,9 @@
                                 WEDNESDAY
                             </div>
                             <div class="specific-gym-exercices">
-                                <img src="assets/auxiliar/REST DAY.png" alt="default img rest day" >
+                                <div class="rest-day">
+                                    REST DAY
+                                </div>
                             </div>
                         </div>
                         <div class="specific-gym-days">
@@ -151,7 +153,9 @@
                                 SUNDAY
                             </div>
                             <div class="specific-gym-exercices">
-                                <img src="assets/auxiliar/REST DAY.png" alt="default img rest day" >
+                                <div class="rest-day">
+                                    REST DAY
+                                </div>
                             </div>
                         </div>
                     </div>
