--- a/finance.html
+++ b/finance.html
@@ -15,7 +15,7 @@
                     <h1>Manage Your Life</h1>
                 </a>
                 <div class="icons">
-                    <a><img src="assets/icons/question.png"></a>
+                    <a href="about.html"><img src="assets/icons/question.png"></a>
                     <a><img src="assets/icons/notifications.png"></a>
                     <a><img src="assets/icons/settings.png"></a>
                 </div>
@@ -180,10 +180,7 @@
                                     <div onclick="cardSelector('will-accounts',this)" id="will" class="self-card">
                                         Will
                                     </div>
-                                    <div class="credit-cards-btns">
-                                        <button class="btn">Add credit card</button>
-                                        <button class="btn">Remove credit card</button>
-                                    </div>
+                                    
                                 </aside>
                                 
                                 <div class="credit-cards-main-content">
