--- a/gym.html
+++ b/gym.html
@@ -16,7 +16,7 @@
                     <h1>Manage Your Life</h1>
                 </a>
                 <div class="icons">
-                    <a><img src="assets/icons/question.png"></a>
+                    <a href="about.html"><img src="assets/icons/question.png"></a>
                     <a><img src="assets/icons/notifications.png"></a>
                     <a><img src="assets/icons/settings.png"></a>
                 </div>
