--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h1>Manage Your Life</h1>
                 </a>
                 <div class="icons">
-                    <a><img src="assets/icons/question.png"></a>
+                    <a href="about.html"><img src="assets/icons/question.png"></a>
                     <a><img src="assets/icons/notifications.png"></a>
                     <a><img src="assets/icons/settings.png"></a>
                 </div>
@@ -38,21 +38,21 @@
             </aside>
 
             <section class="cards">
-                <a class="card">
+                <a href="finance.html" class="card">
                     <header><h3>Finance</h3><img src="assets/icons/lucro.png"></header>
                     <p>LeftOver:</p>
                     <h2>$ 234.524,50</h2>
                     <h4>Month Economy<br>12%</h4>
                 </a>
 
-                <a class="card">
+                <a href="gym.html" class="card">
                     <header><h3>Gym</h3><img src="assets/icons/heart.png"></header>
                     <p>Workout per week: <strong>4/5</strong></p>
                     <img src="assets/auxiliar/linha progresso.png">
                     <small>Next: Chest, Triceps, Shoulders</small>
                 </a>
 
-                <a class="card">
+                <a href="tasks.html" class="card">
                     <header><h3>Tasks</h3><img src="assets/icons/check.png"></header>
                     <div class="scroll">
                         <p>- Task</p>
@@ -68,12 +68,12 @@
                     </div>
                 </a>
 
-                <a class="card graph">
+                <a href="tasks.html" class="card graph">
                     <header><h3>Goals progress</h3></header>
                     <img src="assets/auxiliar/Grafico-de-Progresso-11.png">
                 </a>
 
-                <a class="card graph">
+                <a href="finance.html"class="card graph">
                     <header><h3>Financial progress</h3></header>
                     <img src="assets/auxiliar/grafico de linha.png">
                 </a>
