--- a/tasks.html
+++ b/tasks.html
@@ -24,6 +24,15 @@
         </header>
 
         <main>
+            <div class="overlay">
+                <div class="overlay-container">
+                    <div class="close-overlay">
+                        <button class="close-overlay-btn">
+                            X
+                        </button>
+                    </div>
+                </div>
+            </div>
             <aside class="menu box">
                 <a class="user">
                     <img src="assets/icons/user.png">
