--- a/tasks.html
+++ b/tasks.html
@@ -24,10 +24,10 @@
         </header>
 
         <main>
-            <div class="overlay">
-                <div class="overlay-container">
+            <div id='add-task-btn' class="overlay">
+                <div  class="overlay-container">
                     <div class="close-overlay">
-                        <button class="close-overlay-btn">
+                        <button onclick="closeOverlay('add-task-btn')" class="close-overlay-btn">
                             X
                         </button>
                     </div>
@@ -88,7 +88,7 @@
                             
                         </div>
                         <div class="specific-tasks-main-btns">
-                            <button class="btn">
+                            <button onclick="openOverlay('add-task-btn')" class="btn">
                                 Add Task
                                 <img src="assets/icons/mais.png" alt="">
                             </button>
@@ -165,6 +165,6 @@
             <a href="https://github.com/yanferodrigues" target="_blank"><img src="assets/icons/github.png"></a>
             <a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png"></a>
         </footer>
-
+        <script src="assets/js/general.js"></script>
     </body>
 </html>
