--- a/tasks.html
+++ b/tasks.html
@@ -25,11 +25,14 @@
 
         <main>
             <div id='add-task-btn' class="overlay">
-                <div  class="overlay-container">
+                <div class="overlay-container">
                     <div class="close-overlay">
                         <button onclick="closeOverlay('add-task-btn')" class="close-overlay-btn">
                             X
                         </button>
+                    </div>
+                    <div class="overlay-container-content">
+                            
                     </div>
                 </div>
             </div>
@@ -95,6 +98,10 @@
                             <button class="btn">
                                 Remove task
                                 <img src="assets/icons/menos.png" alt="">
+                            </button>
+                            <button class="btn icons">
+                                Forgotten tasks
+                                <img src="assets/icons/question.png" alt="">
                             </button>
                         </div>
                     </div>
