--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
                     <img src="assets/icons/user.png">
                     <h5>USERNAME</h5>
                 </a>
-                <nav>
-                    <a class="active" ><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
+                <nav id="navegation">
+                    <a class="active"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
                     <a href="finance.html"><img src="assets/icons/money.png"><span>Finance</span></a>
                     <a href="gym.html"><img src="assets/icons/gym.png"><span>Gym</span></a>
                     <a href="tasks.html"><img src="assets/icons/checklist.png"><span>Tasks</span></a>
                 </nav>
             </aside>
+            <button onclick="openNav()" id="openNavegation">
+                <img src="assets/icons/down arrow.png" alt="down arrow">
+            </button>
 
             <section class="cards">
                 <a href="finance.html" class="card">
@@ -84,6 +87,6 @@
             <a href="https://github.com/yanferodrigues" target="_blank"><img src="assets/icons/github.png"></a>
             <a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png"></a>
         </footer>
-
+        <script src="assets/js/general.js"></script>
     </body>
 </html>
