--- a/tasks.html
+++ b/tasks.html
@@ -41,13 +41,16 @@
                     <img src="assets/icons/user.png">
                     <h5>USERNAME</h5>
                 </a>
-                <nav>
+                <nav id="navegation">
                     <a href="index.html"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
                     <a href="finance.html"><img src="assets/icons/money.png"><span>Finance</span></a>
                     <a href="gym.html"><img src="assets/icons/gym.png"><span>Gym</span></a>
                     <a class="active"><img src="assets/icons/checklist.png"><span>Tasks</span></a>
                 </nav>
             </aside>
+            <button onclick="openNav()" id="openNavegation">
+                <img src="assets/icons/down arrow.png" alt="down arrow">
+            </button>
 
             <section class="content-box">
                 <div class="content-title-tasks">
