--- a/about.html
+++ b/about.html
@@ -27,21 +27,21 @@
             <div class="about">
                 <div class="about-content">
                     <p>
-                        O Manage Your Life nasceu de um problema pessoal: a dificuldade de organizar minha vida usando planilhas de Excel, cálculos manuais e controles fragmentados. A partir dessa necessidade real, decidi criar uma solução digital capaz de centralizar informações, automatizar cálculos e oferecer uma visão clara e objetiva sobre organização e produtividade pessoal. <br>
+                        Manage Your Life was born from a personal problem: the difficulty of organizing my life using Excel spreadsheets, manual calculations, and fragmented controls. From this real need, I decided to create a digital solution capable of centralizing information, automating calculations, and providing a clear and objective view of personal organization and productivity. <br>
 
-                        Meu nome é Yan Felipe Rodrigues Vieira, sou estudante de Engenharia de Software e desenvolvedor com foco em back-end, área pela qual me apaixonei ao perceber o poder da programação em resolver problemas reais de forma eficiente e escalável. <br>
+                        My name is Yan Felipe Rodrigues Vieira. I am a Brazilian Software Engineering student and a developer focused on back-end, an area I became passionate about after realizing the power of programming to solve real problems efficiently and at scale. <br>
 
-                        Minha especialização é em Python e Django, tecnologias que utilizo principalmente no desenvolvimento de sistemas, automações e soluções web. Apesar do foco no back-end, também adquiri conhecimentos em front-end — como HTML e CSS, além de noções de JavaScript — para ter autonomia na criação das minhas próprias páginas e aplicações completas. <br>
+                        My specialization is in Python and Django, technologies I mainly use in the development of systems, automations, and web solutions. Despite my focus on back-end, I have also acquired front-end knowledge — such as HTML and CSS, as well as basic JavaScript — to have autonomy in creating my own pages and complete applications. <br>
 
-                        Tenho experiência em resolver problemas reais em ambientes profissionais, especialmente por meio de automações, sempre buscando otimizar processos, reduzir trabalho manual e aumentar a eficiência. Trabalho com Git, possuo inglês avançado e estou em aprendizado constante, acompanhando a evolução da tecnologia e aprimorando minhas habilidades técnicas.   <br>
+                        I have experience solving real problems in professional environments, especially through automation, always aiming to optimize processes, reduce manual work, and increase efficiency. I work with Git, have advanced English skills, and am constantly learning, keeping up with technological evolution and improving my technical skills. <br>
 
-                        Meu principal objetivo é fundar minha própria empresa de tecnologia, focada no desenvolvimento de soluções digitais através da programação — sistemas bem estruturados, funcionais e pensados para gerar impacto real na vida das pessoas e das empresas.
+                        My main goal is to found my own technology company, focused on developing digital solutions through programming — well-structured, functional systems designed to generate real impact in the lives of people and businesses.
                     </p>
 
                     <p>
-                        Numero de celular: (77) 99817-5012 <br>
+                        Phone number: (77) 99817-5012 <br>
                         Email: <br>
-                        Data de lançamento: 
+                        Release date:
                     </p>
                 </div> 
             </div>
