--- a/gym.html
+++ b/gym.html
@@ -80,12 +80,12 @@
                                         <div id="overlay-gym-general-forms">
                                             <div class="overlay-container-content-gym-form">
                                                 <div class="close-gym-form">
-                                                    <button>
+                                                    <button onclick="removeForm(this)">
                                                         -
                                                     </button>
                                                 </div>
                                                 <input class="overlay-container-content-gym-form-title" type="text" placeholder="Title:">
-                                                <div id="gymExercisesContainer">
+                                                <div class="gymExercisesContainer">
                                                     <div class="overlay-container-content-gym-exercises">
                                                         <input class="gym-sets" type="number" placeholder="Set:" autocomplete="off" >
                                                         <span>x</span>
