--- a/gym.html
+++ b/gym.html
@@ -69,7 +69,7 @@
                                     <p>4x12 triceps dipping machine</p>
                                 </div>
                             </div>
-                            <div id='edit-workout-monday' class="overlay">
+                            <div class="overlay" id='edit-workout-monday'>
                                 <div class="overlay-container">
                                     <div class="close-overlay">
                                         <button onclick="closeOverlay('edit-workout-monday')" class="close-overlay-btn">
