--- a/gym.html
+++ b/gym.html
@@ -84,7 +84,23 @@
                                                         -
                                                     </button>
                                                 </div>
-                                                <input class="overlay-container-content-gym-form-title" type="text" placeholder="Title:">
+                                                <select class="overlay-container-content-gym-form-title">
+                                                    <option></option>
+                                                    <option>Chest</option>
+                                                    <option>Back</option>
+                                                    <option>Triceps</option>
+                                                    <option>Biceps</option>
+                                                    <option>Shoulders</option>
+                                                    <option>Forearm</option>
+                                                    <option>Traps</option>
+                                                    <option>Quads</option>
+                                                    <option>Hamstrings</option>
+                                                    <option>Glutes</option>
+                                                    <option>Calves</option>
+                                                    <option>Adductors</option>
+                                                    <option>Abductors</option>
+                                                    <option>Abs</option>
+                                                </select>
                                                 <div class="gymExercisesContainer">
                                                     <div class="overlay-container-content-gym-exercises">
                                                         <input class="gym-sets" type="number" placeholder="Set:" autocomplete="off" >
