--- a/finance.html
+++ b/finance.html
@@ -63,7 +63,8 @@
                                             <p>$ 550,00</p>
                                         </div>
                                     </section>
-                                    <section onclick="openOverlay('report-income')" class="specific-finance-top-income">
+
+                                    <section class="specific-finance-top-income">
                                         <div class="specific-finance-top-title">
                                             <img src="assets/icons/mais.png" alt="">
                                             <h4>Income</h4>
@@ -71,20 +72,8 @@
                                         <div class="specific-finance-top-values">
                                             <p>$ 1.800,00</p>
                                         </div>
-                                        
                                     </section>
-                                    <div class="overlay" id='report-income' >
-                                        <div class="overlay-container">
-                                            <div class="close-overlay">
-                                                <button onclick="closeOverlay('report-income')" class="close-overlay-btn">
-                                                    X
-                                                </button>
-                                            </div>
-                                            <div class="overlay-container-content">
-                                                 
-                                            </div>
-                                        </div>
-                                    </div>
+
                                     <section onclick="openOverlay('report-expenses')" class="specific-finance-top-expenses">
                                         <div class="specific-finance-top-title">
                                             <img src="assets/icons/menos.png" alt="">
