--- a/gym.html
+++ b/gym.html
@@ -84,8 +84,10 @@
                                                         -
                                                     </button>
                                                 </div>
-                                                <select class="overlay-container-content-gym-form-title">
-                                                    <option></option>
+                                                <select aria-placeholder="Muscle Group" class="overlay-container-content-gym-form-title">
+                                                    <option disabled selected hidden>
+                                                        Muscle Group:
+                                                    </option>
                                                     <option>Chest</option>
                                                     <option>Back</option>
                                                     <option>Triceps</option>
