--- a/finance.html
+++ b/finance.html
@@ -251,37 +251,38 @@
                                                     </div>
                                                     <div class="overlay-container-content">
                                                         <div class="credit-self-account-overlay-content">
+                                                            <h3>Phone Installments</h3>
                                                             <img class="credit-self-account-overlay-content-graph" src="assets/auxiliar/Grafico-de-Progresso-11.png" alt="graph">
                                                             <div class="credit-self-account-overlay-content-payed">
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>1/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>2/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>3/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>4/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>5/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>6/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>7/10</p>
                                                                     <p>payed</p>
                                                                 </div>
-                                                                <div class="credit-self-account-overlay-content-payed-instalments">
+                                                                <div class="credit-self-account-overlay-content-payed-instalments payed">
                                                                     <p>8/10</p>
                                                                     <p>payed</p>
                                                                 </div>
